--- a/Rabbit.IOnline/packages.config
+++ b/Rabbit.IOnline/packages.config
@@ -29,7 +29,8 @@
   <package id="Rabbit.Net" version="1.1.3.1" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster" version="4.0.0" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster.ServiceStack" version="1.0.0" targetFramework="net45" />
-  <package id="RabbitWebMvc" version="1.0.1" targetFramework="net45" />
+  <package id="RabbitWeb" version="1.1.0" targetFramework="net45" />
+  <package id="RabbitWebMvc" version="1.0.2.1" targetFramework="net45" />
   <package id="RavenDB.Client" version="3.0.3785" targetFramework="net45" />
   <package id="RecaptchaNet" version="1.3" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.40" targetFramework="net45" />
