Choose ApplicationBootstrap to use

--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -17,6 +17,8 @@
     <add key="CategoryDataFilePath" value="{ENV}" />
     <add key="CreditsFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/Credits.txt" />
 
+    <add key="UseApplicationBootstrap" value="{ENV}"/>
+
     <add key="UseRedis" value="false" />
     <add key="RedisEndPoint" value="{ENV}" />
     <add key="RedisPassword" value="{ENV}" />
