--- a/Rabbit.IWasThere.Services/Services.csproj
+++ b/Rabbit.IWasThere.Services/Services.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="IDataService.cs" />
+    <Compile Include="IDataServiceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
