--- a/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/Services.CacheAwareImpl.csproj
+++ b/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/Services.CacheAwareImpl.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisDataService.cs" />
+    <Compile Include="RedisDataServiceFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Rabbit.IWasThere.Services\Services.csproj">
@@ -52,6 +53,10 @@
     </Reference>
     <Reference Include="Rabbit.Cache.Redis, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Rabbit.Cache.Redis.1.1.0\lib\Rabbit.Cache.Redis.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Rabbit.Configuration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Rabbit.Configuration.1.0.1\lib\Rabbit.Configuration.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Rabbit.Foundation, Version=1.0.0.31909, Culture=neutral, processorArchitecture=MSIL">
