--- a/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/packages.config
+++ b/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Rabbit.Cache" version="1.1.0" targetFramework="net45" />
   <package id="Rabbit.Cache.Redis" version="1.1.0" targetFramework="net45" />
+  <package id="Rabbit.Configuration" version="1.0.1" targetFramework="net45" />
   <package id="Rabbit.Foundation" version="1.4.0" targetFramework="net45" />
   <package id="Rabbit.Integrations.Redis" version="1.1.2" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster" version="4.0.0" targetFramework="net45" />
