--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -3,7 +3,8 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="IOnlineDb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=IOnlineDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
   </connectionStrings>
@@ -15,6 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="CategoryDataFilePath" value="{ENV}" />
+    <add key="SystemDataFilePath" value="{ENV}" />
     <add key="CreditsFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/Credits.txt" />
 
     <add key="UseRedis" value="false" />
