--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -15,6 +15,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
+    <add key="PageSize" value="{ENV}"/>
+
     <add key="CategoryDataFilePath" value="{ENV}" />
     <add key="AdFileUri" value="{ENV}"/>
     <add key="SystemDataFilePath" value="{ENV}" />
