--- a/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/Services.CacheAwareImpl.csproj
+++ b/ServiceLayer/Rabbit.IWasThere.Services.CacheAwareImpl/Services.CacheAwareImpl.csproj
@@ -68,8 +68,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Rabbit.SerializationMaster, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Rabbit.SerializationMaster.4.0.0\lib\Rabbit.SerializationMaster.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Rabbit.SerializationMaster.4.0.1\lib\Rabbit.SerializationMaster.dll</HintPath>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.0.316.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\StackExchange.Redis.1.0.481\lib\net45\StackExchange.Redis.dll</HintPath>
