--- a/ServiceLayer/Rabbit.IWasThere.Services.DirectImpl/Services.DirectImpl.csproj
+++ b/ServiceLayer/Rabbit.IWasThere.Services.DirectImpl/Services.DirectImpl.csproj
@@ -50,8 +50,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Rabbit.SerializationMaster, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Rabbit.SerializationMaster.4.0.0\lib\Rabbit.SerializationMaster.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Rabbit.SerializationMaster.4.0.1\lib\Rabbit.SerializationMaster.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
